prevent types overflow

--- a/frontend/css/result.css
+++ b/frontend/css/result.css
@@ -112,6 +112,9 @@
   width: fit-content;
   background-color: var(--secondary-color);
   padding: var(--anime-item-padding);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .anime-item__mal_poster {
